--- a/serenity/src/styles/footer.css
+++ b/serenity/src/styles/footer.css
@@ -24,38 +24,59 @@ body {
     list-style: none;
     padding: 0;
     margin: 0;
-    z-index: 100;
+    z-index: 1;
   }
   
   .socials {
     gap: 20px;
-    z-index: 100;
+    z-index: 1;
   }
   
   .socials a {
     font-size: 24px;
-    z-index: 100;
+    z-index: 1;
   }
 
+  .socials {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    z-index: 1;
+  }
+  
+  .socials li {
+    margin-right: 20px; /* Add margin between each social icon */
+  }
+  
+  .socials img {
+    filter: brightness(0) invert(1); /*makes logos white */
+    width: 30px; /* Set the width of the images */
+    height: auto; /* Maintain aspect ratio */
+  }
+  
+  /* Optionally, you can adjust the font size of the social icons */
   .fa-brands {
-    z-index: 100;
+    font-size: 24px;
+    z-index: 1;
   }
-
-  .fa-instagram, .fa-github, .fa-linkedin {
-    z-index: 100;
-  }
+  
   
   .links {
     color: #d6dfed;
     gap: 10px;
-    z-index: 10;
+    z-index: 1;
+  }
+
+  .links li, a{
+    z-index: 1;
   }
   
   .footer-legal {
     font-size: 12px;
     color: white;
     margin: 0;
-    z-index: 100;
+    z-index: 1;
   }
   
   svg {
@@ -64,11 +85,12 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    transform: scaleY(3) scaleX(4);
+    transform: scaleY(3) scaleX(8);
     transform-origin: bottom;
     box-sizing: border-box;
     display: block;
     pointer-events: none;
+    z-index: -1;
   }
   
   footer {
@@ -85,7 +107,7 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     gap: 30px;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
     padding-left: 60px;
     width: 100%;
   }
